<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:layout_height="wrap_content" android:text="@string/startdate" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="fill_parent" android:gravity="center" android:layout_weight="1"></TextView>
    <DatePicker android:layout_height="wrap_content" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/startdate"></DatePicker>
    <TextView android:layout_height="wrap_content" android:text="@string/duration" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="fill_parent" android:gravity="center" android:layout_weight="1"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="wrap_content" android:layout_gravity="center" android:layout_weight="1">
        <Spinner android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/year" android:layout_gravity="center_vertical"></Spinner>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/year" android:layout_gravity="center_vertical"></TextView>
        <Spinner android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/month" android:layout_gravity="center_vertical"></Spinner>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/month" android:layout_gravity="center_vertical"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout5" android:layout_width="wrap_content" android:layout_gravity="center">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/discount" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/discount"></Spinner>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView6" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/day" android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
    </LinearLayout>
    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/to" android:layout_weight="1" android:layout_gravity="center" android:id="@+id/desc"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_weight="1" android:layout_gravity="center" android:layout_width="wrap_content">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/inf" android:id="@+id/day"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView7" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/day"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_weight="1" android:layout_gravity="center">
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/inf2" android:id="@+id/sec"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView9" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/sec"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_weight="1" android:layout_gravity="center" android:layout_width="wrap_content">
        <TextView android:layout_height="wrap_content" android:id="@+id/textView10" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/passed"></TextView>
        <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/zero" android:id="@+id/percent"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView12" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/percent"></TextView>
    </LinearLayout>
    <Button android:layout_height="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:text="@string/ok" android:visibility="gone" android:id="@+id/ok" android:layout_width="fill_parent"></Button>
</LinearLayout>
